--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@elizaos/core": "^0.25.8",
-    "@emotion/is-prop-valid": "latest",
+    "@emotion/is-prop-valid": "^1.2.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -47,33 +47,32 @@
     "@react-spring/web": "^9.7.5",
     "@tanstack/react-query": "^4.36.1",
     "@types/js-cookie": "^3.0.6",
-    "async": "",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "cross-fetch": "^4.0.0",
     "date-fns": "^2.30.0",
-    "dayjs": "latest",
+    "dayjs": "^1.11.10",
     "embla-carousel-react": "8.5.1",
     "ethers": "^6.13.5",
-    "framer-motion": "latest",
+    "framer-motion": "^11.0.3",
     "input-otp": "1.4.1",
     "isows": "^1.0.6",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
-    "next": "^15.3.1",
-    "next-themes": "latest",
+    "next": "^14.1.0",
+    "next-themes": "^0.2.1",
     "openai": "^4.86.1",
     "pinata-web3": "^0.5.4",
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
-    "react-fast-marquee": "latest",
+    "react-fast-marquee": "^1.5.2",
     "react-hook-form": "^7.54.1",
     "react-markdown": "^10.0.0",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "recharts": "^2.12.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -87,9 +86,9 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
